<resources>
    <string name="app_name">So-Feed Formulation</string>
    <string name="index_content_description">Index</string>
    <string name="label_button">label_button</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="page_sign_in">page_sign_in</string>
    <string name="back_button">back_button</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="emailButton">Your Email</string>
    <string name="passwordButton">Password</string>
    <string name="sign_in_Button">Sign In</string>
    <string name="page_sign_up">page_sign_up</string>
    <string name="user_name">User Name</string>
    <string name="homepage">Home Page</string>
    <string name="hello_user">Hello User!</string>
    <string name="logout">Log Out</string>
    <string name="google_button">Google Sign In</string>
    <string name="default_web_client_id">553150937473-knc897egcf55a60ks6pkmk9f5h56h4lq.apps.googleusercontent.com</string>
    <string name="userprofile">User Profile</string>
    <string name="list_icon">List Icon</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="saved_formulation">Saved Formulation</string>
    <string name="change_password">Change Password</string>
    <string name="settings">Settings</string>
    <string name="edit_picture">Edit Picture</string>
    <string name="icon1">Icon 1</string>
    <string name="icon2">Icon 2</string>
    <string name="icon3">Icon 3</string>
    <string name="icon4">Icon 4</string>
    <string name="icon5">Icon 5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bahan_pakan">Bahan Pakan</string>
    <string name="harga_pakan">Harga Pakan</string>
    <string name="formulasi">Formulasi</string>
    <string name="content_description">Content Description</string>
    <string name="profile_updated">Profile Updated</string>
    <string name="keterangan_profile1">Your profile detail has been updated, changes </string>
    <string name="keterangan_profile2">already reflected in the profile page.</string>
    <string name="confirm">Confirm</string>
    <string name="save_changes">Save Changes</string>
    <string name="Hai">Hai,</string>

    <string name="user">User</string>
    <string name="teks1">Mari kita jelajahi pakan ternak \nberkelanjutan</string>
    <string name="teks2">Berkelanjutan</string>
    <string name="rumput_gajah">Rumput Gajah</string>
    <string name="pilih_hewan">Pilih ransum hewan ternak</string>
    <string name="formulasikan">Formulasikan</string>
    <string name="hasil_formulasi">Komposisi Ransum</string>
    <string name="lihat_kandungan">Lihat Kandungan\nNutrisi</string>
    <string name="kembali">Kembali ke\nFormulasi</string>
    <string name="kandungan_nutrisi">Kandungan Nutrisi</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="default_bahan_kering">0.000%</string>
    <string name="default_abu">0.000%</string>
    <string name="default_serat">0.000%</string>
    <string name="default_lemak">0.000%</string>
    <string name="default_protein">0.000%</string>
    <string name="default_tdn">0.000%</string>
    <string name="default_ca">0.000%</string>
    <string name="default_p">0.000%</string>
    <string name="default_metana">0</string>
    <string name="default_harga">Rp0000.00</string>
    <string name="judul_index">Optimalkan Ransum,\nKurangi Emisi Metana</string>
    <string name="judul_index2">Temukan Optimasi\nFormulasi Ransum</string>
    <string name="hai">Hai, User!</string>
    <string name="container1">Berisi data\nbahan-bahan pakan</string>
    <string name="informasi_pakan">Informasi Pakan</string>
    <string name="buat_formualasi">Buat formulasi\nanda disini</string>
    <string name="market">Market</string>
    <string name="container3">Untuk transaksi\nbahan pakan</string>
    <string name="metana">Metana</string>
    <string name="container4">Informasi \nterkait metana</string>
    <string name="konsentrat">Konsentrat</string>
    <string name="mineral">Mineral</string>
    <string name="feedback">Feedback</string>
    <string name="default_username">Username: exampleuser123</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="formulasi1">Lakukan formulasi dengan lebih\ndari 4+ jenis ransum dan 40+\nbahan pakan yang beragam </string>
    <string name="formulasi_ransum">Formulasi Ransum</string>
    <string name="arsip_formulasi">Arsip Formulasi</string>
    <string name="teks_arsip">Lihat kembali hasil\nformulasi ransum yang sudah\ndilakukan sebelumnya</string>
    <string name="teks_daftar">Kenali bahan-bahan pakan\nyang ada di sekitar kamu!</string>
    <string name="teks_metana">Gali lebih dalam terkait metana\ndan keberlanjutan lingkungan</string>
    <string name="judul_hasil">Konsentrat Sapi Penggemukan\nPeternatakan Pak Jafar</string>
</resources>