<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".profile_sheet"
    android:paddingBottom="50dp"
    >

    <ImageView
        android:id="@+id/profile_updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/profile_updated"
        android:contentDescription="@string/content_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/update_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/profile_updated"
        android:text="@string/profile_updated"
        android:textSize="28sp"
        android:fontFamily="@font/nunitobold"
        app:layout_constraintTop_toBottomOf="@id/profile_updated"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="-70dp"
        />

    <TextView
        android:id="@+id/keterangan_profile1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/keterangan_profile1"
        android:text="@string/keterangan_profile1"
        android:fontFamily="@font/nunitosemibold"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/update_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/keterangan_profile2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/keterangan_profile2"
        android:text="@string/keterangan_profile2"
        android:fontFamily="@font/nunitosemibold"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/keterangan_profile1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#94D073"
        android:backgroundTintMode="src_in"
        android:fontFamily="@font/nunitobold"
        android:text="@string/confirm"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/keterangan_profile2"
        app:layout_constraintWidth_max="330dp"
        app:layout_constraintWidth_min="100dp"
        android:layout_marginTop="32dp"
        />














</androidx.constraintlayout.widget.ConstraintLayout>